--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,8 +14,6 @@ import DarkModeToggle from "./DarkModeToggle.astro";
     <section class="text-text-bold">
       <ul class="unset flex gap-4 [&>li]:p-0">
         <li><HeaderLink href="/">Home</HeaderLink></li>
-        <li><HeaderLink href="/blog">Blog</HeaderLink></li>
-        <li><HeaderLink href="/projects">Projects</HeaderLink></li>
       </ul>
     </section>
   </nav>
@@ -24,23 +22,23 @@ import DarkModeToggle from "./DarkModeToggle.astro";
   >
     <a
       class="unset text-xl ml-4 hover:text-text-link"
-      href="https://github.com/flexdinesh/blogster"
+      href="https://github.com/bmosigisi"
     >
       <i
         class="fa-brands fa-github"
         aria-hidden="true"
-        title="Blogster on GitHub"></i>
-      <span class="fa-sr-only">Blogster on GitHub</span>
+        title="Mosigisi on GitHub"></i>
+      <span class="fa-sr-only">Mosigisi on GitHub</span>
     </a>
     <a
       class="unset text-xl ml-4 hover:text-text-link"
-      href="https://twitter.com/flexdinesh"
+      href="https://twitter.com/bmosigisi"
     >
       <i
         class="fa-brands fa-twitter"
         aria-hidden="true"
-        title="Dinesh on Twitter"></i>
-      <span class="fa-sr-only">Dinesh on Twitter</span>
+        title="Mosigisi on Twitter"></i>
+      <span class="fa-sr-only">Mosigisi on Twitter</span>
     </a>
   </div>
   <DarkModeToggle />
