--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -32,7 +32,7 @@ import DarkModeToggle from "./DarkModeToggle.astro";
     </a>
     <a
       class="unset text-xl ml-4 hover:text-text-link"
-      href="https://twitter.com/bmosigisi"
+      href="https://twitter.com/brianmosigisi"
     >
       <i
         class="fa-brands fa-twitter"
